# potential_backbone

./: CMakeLists.txt  README.md
cuda/: Homework2_1.cu  Homework2_2.cu  a.out  homework4.cu  homework4_ziling_zhang.cu  potential.cu
src/: main.cpp  scalorPotential.cpp  scalorPotential.h
